[package]
name = "my_app"
version = "0.2.0"
edition = "2021"

[lib]
name = "my_app"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
target_sdk_version = 33
